Section#Header - correct spacing and sizing inside and around around search bar
Section#Our-Services
- align title and link on both sides

Section#Accreditations carousel - align title and link on both sides

Section#Latest-news
- make all cards the same height
- give all cards a box-shadow

Section#Cookie-app
-restore cookie app button

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -101,7 +101,6 @@ body{
             border-color: #999aa2;
             box-shadow: 0 3px 35px rgba(0,0,0,.1);
         }
-        display: none;
     }
     div#cookie-policy-popup-container{
         visibility: hidden;//initially hidden on page load
