--- a/scss/main-sections/_middle.scss
+++ b/scss/main-sections/_middle.scss
@@ -3,7 +3,9 @@ div#middle{
         div.our-services-headline{
             color: #333645;
             h2{
-                padding: 25px 0 0 0;
+                // padding: 25px 0 0 0;
+                margin: 60px 0 40px 0;
+                // background-color: green;
                 strong{
                     font-size: 2.7rem;
                     line-height: 1.1;
@@ -39,11 +41,19 @@ div#middle{
                 justify-content: space-between;
                 align-items: baseline;
                 margin: -20px 0 0 0;
+                h2{
+                    margin: 50px 0 30px 0;
+                }
                 a{
                     &.sm{ display: none;}
                     &.md{ display: inline-block;}
                     span{font-size: 2.5rem;}
                     em{font-size: 2.25rem;}
+                }
+            }
+            @media (min-width: 992px){
+                h2{
+                    margin: 45px 0 20px 0;
                 }
             }
         }
